# Haxl

./: .gitignore  .travis.yml  Apple iPod Touch  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PATENTS  Propeller ads  Qatar Airways Algeria  Sony Tv  Sony Xperia  TARGETS  changelog.md  ebay AU  fb hack  haxl.cabal  readme.md  stack.yaml
.github/workflows/: haskell-ci.yml  test.yml
Haxl/: Core.hs  Prelude.hs
Haxl/Core/: CallGraph.hs  DataCache.hs  DataSource.hs  Env.hs  Exception.hs  Fetch.hs  FiniteCache.hs  Flags.hs  Memo.hs  Monad.hs  Parallel.hs  Profile.hs  RequestStore.hs  Run.hs  Show1.hs  ShowP.hs  StateStore.hs  Stats.hs  Types.hs  Util.hs
Haxl/Core/Monad/: Fetch.hs  Parallel.hs  Profile.hs  Schedule.hs
Haxl/DataSource/: ConcurrentIO.hs
example/facebook/: FB.hs  LICENSE  Setup.hs  TestFB.hs  haxl-facebook.cabal  readme.md
example/facebook/FB/: DataSource.hs
example/sql/: Main.hs  TARGETS  haxl-example.cabal  readme.md
tests/: AdoTests.hs  AllTests.hs  BadDataSource.hs  BatchTests.hs  Bench.hs  CoreTests.hs  DataCacheTest.hs  DataSourceDispatchTests.hs  EquivDataSource.hs  ExampleDataSource.hs  ExceptionStackTests.hs  FBMain.hs  FullyAsyncTest.hs  LoadCache.hs  LoadCache.txt  Main.hs  MemoizationTests.hs  MockTAO.hs  MonadAsyncTest.hs  MonadBench.hs  OutgoneFetchesTests.hs  ParallelTests.hs  ProfileTests.hs  SleepDataSource.hs  StatsTests.hs  TARGETS  TestBadDataSource.hs  TestEquivDataSource.hs  TestExampleDataSource.hs  TestMain.hs  TestTypes.hs  TestUtils.hs  WorkDataSource.hs  WriteTests.hs
