name:                haxl
version:             0.3.0.0
synopsis:            A Haskell library for efficient, concurrent,
                     and concise data access.
homepage:            https://github.com/facebook/Haxl
bug-reports:         https://github.com/facebook/Haxl/issues
license:             BSD3
license-file:        LICENSE
author:              Facebook, Inc.
maintainer:          The Haxl Team <haxl-team@fb.com>
copyright:           Copyright (c) 2014-present, Facebook, Inc.
category:            Concurrency
build-type:          Simple
stability:           alpha
cabal-version:       >= 1.10
tested-with:
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.1

description:
  Haxl is a library and EDSL for efficient scheduling of concurrent data
  accesses with a concise applicative API.
  .
  To use Haxl, you need to implement one or more /data sources/, which
  provide the means for accessing remote data or other I/O that you
  want to perform using Haxl.
  .
  Haxl provides two top-level modules:
  .
  * /Data-source implementations/ import "Haxl.Core",
  .
  * /Client code/ import your data sources and "Haxl.Prelude", or some
   other client-level API that you provide.

extra-source-files:
  readme.md
  PATENTS
  tests/LoadCache.txt
  changelog.md

library

  build-depends:
    HUnit >= 1.2 && < 1.4,
    aeson >= 0.6 && < 0.12,
    base == 4.*,
    bytestring >= 0.9 && < 0.11,
    containers == 0.5.*,
    deepseq,
    directory >= 1.1 && < 1.3,
    exceptions >=0.8 && <0.9,
    filepath >= 1.3 && < 1.5,
    hashable == 1.2.*,
    pretty == 1.1.*,
    text >= 1.1.0.1 && < 1.3,
    time >= 1.4 && < 1.7,
    unordered-containers == 0.2.*,
    vector >= 0.10 && <0.12

  exposed-modules:
    Haxl.Core,
    Haxl.Core.DataCache,
    Haxl.Core.Exception,
    Haxl.Core.Monad,
    Haxl.Core.RequestStore,
    Haxl.Core.StateStore,
    Haxl.Core.Show1,
    Haxl.Core.Types,
    Haxl.Core.Memo,
    Haxl.Prelude

  other-modules:
    Haxl.Core.Util

  default-language: Haskell2010

  ghc-options:
    -Wall
    -fno-warn-name-shadowing


test-suite test

  build-depends:
    HUnit,
    aeson,
    base == 4.*,
    bytestring,
    containers,
    hashable,
    haxl,
    text,
    unordered-containers

  ghc-options:
    -Wall
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures

  hs-source-dirs:
    tests

  main-is:
    Main.hs

  other-modules:
    BatchTests
    CoreTests
    DataCacheTest
    ExampleDataSource
    LoadCache
    MockTAO
    TestExampleDataSource
    TestTypes
    TestUtils

  type:
    exitcode-stdio-1.0

  default-language: Haskell2010

executable monadbench
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  build-depends:
    base,
    haxl,
    hashable,
    time
  main-is:
    MonadBench.hs
  other-modules:
    ExampleDataSource
  ghc-options:
    -O2 -main-is MonadBench -rtsopts
