name:                haxl-facebook
version:             0.2.0.0
synopsis:            An example Haxl data source for accessing the
                     Facebook Graph API
homepage:            https://github.com/facebook/Haxl
bug-reports:         https://github.com/facebook/Haxl/issues
license:             BSD3
license-file:        LICENSE
author:              Facebook, Inc.
maintainer:          The Haxl Team <haxl-team@fb.com>
copyright:           Copyright (c) 2014-present, Facebook, Inc.
category:            Concurrency, Network
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base == 4.*,
    aeson >= 0.6 && < 1.4,
    fb >=1.0 && <1.3,
    http-conduit >=2.1 && <2.4,
    resourcet >=1.1 && <1.3,
    text >= 1.2.1.0 && < 1.3,
    transformers >=0.3 && <0.6,
    hashable >=1.2 && <1.3,
    data-default >=0.5 && <0.8,
    http-client-tls >=0.2 && <0.4,
    time >= 1.4 && < 1.9,
    conduit >=1.1 && <1.4,
    async >=2.0 && <2.3,
    haxl == 2.0.*

  other-extensions:
    OverloadedStrings,
    StandaloneDeriving,
    RecordWildCards,
    GADTs,
    TypeFamilies,
    MultiParamTypeClasses,
    DeriveDataTypeable

  exposed-modules:
    FB,
    FB.DataSource

  ghc-options:
    -Wall -fno-warn-name-shadowing

  default-language:
    Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0

  main-is:
    TestFB.hs

  build-depends:
    base == 4.*,
    aeson >= 0.6 && < 1.4,
    fb >=1.0 && <1.3,
    http-conduit >=2.1 && <2.4,
    resourcet >=1.1 && <1.3,
    text >= 1.2.1.0 && < 1.3,
    transformers >=0.3 && <0.6,
    hashable >=1.2 && <1.3,
    data-default >=0.5 && <0.8,
    http-client-tls >=0.2 && <0.4,
    time >= 1.4 && < 1.9,
    conduit >=1.1 && <1.4,
    async >=2.0 && <2.3,
    haxl == 2.0.*,
    unordered-containers == 0.2.*,
    vector >= 0.10 && < 0.13

  default-language:
    Haskell2010
